fix(headless-cms): simplify imports

--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code-storage-id.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code-storage-id.mdx
@@ -14,8 +14,6 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="info" title="Can I use this?">
 
-This feature is available since **v5.33.0**.
-
 If you created your project with Webiny **v5.33.0** or later, you can skip the upgrade part of the article.
 
 </Alert>
@@ -61,6 +59,8 @@ We create a `storageId` automatically, but for your existing models you want to 
 So, for example, if you have a model defined:
 
 ```typescript
+import { CmsModelPlugin } from "@webiny/api-headless-cms";
+
 const myModel = new CmsModelPlugin({
   modelId: "myModel",
   fields: [
@@ -112,6 +112,8 @@ const myModel = new CmsModelPlugin({
 You will need to add the `storageId` property to each of the fields. Don't forget the nested fields in the `object` type field.
 
 ```typescript
+import { CmsModelPlugin } from "@webiny/api-headless-cms";
+
 new CmsModelPlugin({
   modelId: "myModel",
   fields: [
