--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
@@ -11,12 +11,6 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-<Alert type="info" title="Can I use this?">
-
-This feature is available since **v5.11.0**.
-
-</Alert>
-
 ## Overview
 
 Content models and content model groups can be defined in two ways.
@@ -61,8 +55,7 @@ Both plugins can be defined within a single file.
 Let's create a [`models.ts`](https://github.com/webiny/webiny-examples/blob/master/headless-cms/content-model-plugins/basic/api/code/headlessCMS/src/plugins/models.ts) file in the `api/code/headlessCMS/src/plugins` directory.
 
 ```ts api/code/headlessCMS/src/plugins/models.ts
-import { CmsModelPlugin } from "@webiny/api-headless-cms/content/plugins/CmsModelPlugin";
-import { CmsGroupPlugin } from "@webiny/api-headless-cms/content/plugins/CmsGroupPlugin";
+import { CmsGroupPlugin, CmsModelPlugin } from "@webiny/api-headless-cms";
 
 export default [
   // Defines a new "E-Commerce" content models group.
@@ -277,10 +270,9 @@ And you should be able to see the following Product model.
 In this example, we show how we can define content models and content model groups only for a specific locale, in our case, the `en-US`.
 
 ```ts api/code/headlessCMS/src/plugins/models.ts
-import { CmsModelPlugin } from "@webiny/api-headless-cms/content/plugins/CmsModelPlugin";
-import { CmsGroupPlugin } from "@webiny/api-headless-cms/content/plugins/CmsGroupPlugin";
-import { ContextPlugin } from "@webiny/handler/plugins/ContextPlugin";
+import { CmsGroupPlugin, CmsModelPlugin } from "@webiny/api-headless-cms";
 import { CmsContext } from "@webiny/api-headless-cms/types";
+import { ContextPlugin } from "@webiny/handler";
 
 export default [
     new ContextPlugin((context: CmsContext) => {
@@ -314,10 +306,9 @@ In Admin Area, user's current local is sent with every issued HTTP request, via 
 In this example, we show how we can define content models and content model groups only for a specific tenant, in our case, the `root`.
 
 ```ts api/code/headlessCMS/src/plugins/models.ts
-import { CmsModelPlugin } from "@webiny/api-headless-cms/content/plugins/CmsModelPlugin";
-import { CmsGroupPlugin } from "@webiny/api-headless-cms/content/plugins/CmsGroupPlugin";
-import { ContextPlugin } from "@webiny/handler/plugins/ContextPlugin";
+import { CmsGroupPlugin, CmsModelPlugin } from "@webiny/api-headless-cms";
 import { CmsContext } from "@webiny/api-headless-cms/types";
+import { ContextPlugin } from "@webiny/handler";
 
 export default [
     new ContextPlugin((context: CmsContext) => {
