fix(upgrade-guide): note about ui upgrade

--- a/src/docs/shared/release-notes/5.33.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.33.0/upgrade-guide.mdx
@@ -60,6 +60,8 @@ There is a database upgrade that we execute from the Admin Area. To make sure it
 
 When upgrade screen shows, just follow the instructions.
 
+Note that upgrade is done across all the models you have in all tenants and all locales.
+
 <Alert type="warning">
 
 As stated in the [Upgrade Webiny](../upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
