fix(integrations): add missing API token permissions

--- a/src/docs/5.28.x/headless-cms/integrations/gatsby.mdx
+++ b/src/docs/5.28.x/headless-cms/integrations/gatsby.mdx
@@ -79,6 +79,8 @@ For more information about the [Headless CMS GraphQL API, see this page of our d
 
 Next, let's configure API credentials. Choose **API Keys** in the sidebar. Add an API key with any name and description. Select "Headless CMS" and choose a Custom access level for all content model groups with the values `read` and `preview`. Make sure to leave "manage" unchecked. This will help secure our Webiny instance.
 
+If you're planning to source images from Webiny too, scroll down to the "File Manager" section and enable Custom access to all files with `read` as the primary action.
+
 Save the API token and the Token itself will be revealed. You can use the same API token for both published and draft posts.
 
 ## Set up a GatsbyJS project
