wip(release-notes): lifecycle events

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -18,3 +18,17 @@ To learn more about our `@webiny/api-mailer` package, please read this [article]
 To make the configuration of the Mailer transports easier, we added the Mailer Settings in the Admin UI.
 
 ![Mailer Settings](/docs/overview/features/mailer/assets/mailer-settings.png)
+
+
+## System Wide
+
+### Lifecycle Events ([#2615](https://github.com/webiny/webiny-js/pull/2615))
+
+Because there were some inconsistencies in the naming of the lifecycle events throughout the system, we changed those to be same everywhere.
+
+All the lifecycle events follow, which use publish / subscribe pattern, now look something like this:
+
+* `onEntryBeforeCreate`
+* `onModelAfterCreate`
+* `onPageBeforeUpdate`
+* `onPageUpdateError` <- note that this is a bit different, but there is no before or after error
