wip(release-notes): lifecycle events

--- a/src/docs/5.34.x/overview/features/mailer.mdx
+++ b/src/docs/5.34.x/overview/features/mailer.mdx
@@ -125,11 +125,11 @@ const handler = createHandler({
 ## Usage
 
 For example, let's say you want to send an e-mail when user creates an entry in the `Person` model.
-You would want to subscribe to the `onAfterEntryCreate` event and send an e-mail only when added entry to that certain model.
+You would want to subscribe to the `onEntryAfterCreate` event and send an e-mail only when added entry to that certain model.
 
 ```typescript
 const plugin = new ContextPlugin<MailerContext>(async context => {
-  context.cms.onAfterEntryCreate.subscribe(async ({ entry, model }) => {
+  context.cms.onEntryAfterCreate.subscribe(async ({ entry, model }) => {
     if (model.modelId !== "person") {
       return;
     }
