--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -32,3 +32,5 @@ All the lifecycle events follow, which use publish / subscribe pattern, now look
 * `onModelAfterCreate`
 * `onPageBeforeUpdate`
 * `onPageUpdateError` <- note that this is a bit different, but there is no before or after error
+
+All old lifecycle events work, but they are deprecated and will be removed in, probably, `5.36.0` version of Webiny,
