wip(release-notes): lifecycle events

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -17,9 +17,6 @@ To learn more about our `@webiny/api-mailer` package, please read this [article]
 
 To make the configuration of the Mailer transports easier, we added the Mailer Settings in the Admin UI.
 
-![Mailer Settings](/docs/overview/features/mailer/assets/mailer-settings.png)
-
-
 ## System Wide
 
 ### Lifecycle Events ([#2615](https://github.com/webiny/webiny-js/pull/2615))
@@ -31,6 +28,6 @@ All the lifecycle events follow, which use publish / subscribe pattern, now look
 * `onEntryBeforeCreate`
 * `onModelAfterCreate`
 * `onPageBeforeUpdate`
-* `onPageUpdateError` <- note that this is a bit different, but there is no before or after error
+* `onPageUpdateError` - note that this is a bit different, but there is no `before` or `after` when handling an error
 
 All old lifecycle events work, but they are deprecated and will be removed in, probably, `5.36.0` version of Webiny,
