--- a/src/docs/5.34.x/headless-cms/references/lifecycle-events.mdx
+++ b/src/docs/5.34.x/headless-cms/references/lifecycle-events.mdx
@@ -5,8 +5,8 @@ description: Learn about Headless CMS lifecycle events, how they work and how to
 
 import { Alert } from "@/components/Alert";
 
-<Alert type="danger" title="Deprecation of lifecycle events created before 5.33.0">
-In the 5.33.0 we changed the property names which define the lifecycle events in the Headless CMS.
+<Alert type="danger" title="Deprecation of lifecycle events created before 5.34.0">
+In the 5.34.0 we changed the property names which define the lifecycle events in the Headless CMS.
 Old ones are still available, but are marked as deprecated. They will be removed in 5.35.0.
 </Alert>
 
@@ -155,6 +155,31 @@ new ContextPlugin<CmsContext>(async context => {
 });
 ```
 
+### onGroupCreateError
+
+This event is triggered on group create error.
+
+#### Event arguments
+
+| Property | Description                    |
+| -------- | ------------------------------ |
+| group    | Group object which was going to be created |
+| error    | Error object |
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onGroupCreateError.subscribe(async ({ group }) => {
+    /**
+     * For example, notify another system that group could not be created.
+     */
+    await notifyAnotherSystemAboutGroupCreateError({ group });
+  });
+});
+```
+
+
 ### onGroupBeforeUpdate
 
 This event is triggered before a group is changed and stored into the database.
@@ -205,6 +230,32 @@ new ContextPlugin<CmsContext>(async context => {
   });
 });
 ```
+
+### onGroupUpdateError
+
+This event is triggered on group update error.
+
+#### Event arguments
+
+| Property | Description                    |
+| -------- | ------------------------------ |
+| original    | Group object received from the database |
+| group    | Group object which was going to be updated |
+| error    | Error object |
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onGroupUpdateError.subscribe(async ({ group }) => {
+    /**
+     * For example, notify another system that group could not be updated.
+     */
+    await notifyAnotherSystemAboutGroupUpdateError({ group });
+  });
+});
+```
+
 
 ### onGroupBeforeDelete
 
@@ -264,6 +315,7 @@ This event is triggered on group delete error.
 | Property | Description                    |
 | -------- | ------------------------------ |
 | group    | Group object which was going to be deleted |
+| error    | Error object |
 
 #### How to subscribe to this event?
 
@@ -502,7 +554,7 @@ new ContextPlugin<CmsContext>(async context => {
 <Alert type="info">
 
 Note that `storageEntry`, `originalStorageEntry`, `latestStorageEntry` and `publishedStorageEntry` are objects derived from the `entry` object which we want to store into the database.
-Those new objects have `StorageTransformPlugin` run on them to prepare them to be stored. [Find out why we use `StorageTransformPlugin` here](./storage-transform-plugin).
+Those new objects have `StorageTransformPlugin` run on them to prepare them to be stored.
 
 </Alert>
 
