fix(lifecycleevents): match docs to codebase

--- a/src/docs/5.34.x/headless-cms/references/lifecycle-events.mdx
+++ b/src/docs/5.34.x/headless-cms/references/lifecycle-events.mdx
@@ -28,9 +28,7 @@ Lifecycle events using publish/subscribe pattern replace the hook plugins starti
 
 In our Headless CMS we provide lifecycle events available for you to hook into.
 
-With the lifecycle events you can hook into a number of different operations.
-
-For example, when using [DynamoDB + Elasticsearch](https://github.com/webiny/webiny-js/blob/next/packages/api-headless-cms-ddb-es/src/index.ts#L111) as storage layer, we use the `onSystemBeforeInstall` to insert the template for Elasticsearch index.
+With the lifecycle events you can hook into a number of different operations. For example, when using [DynamoDB + Elasticsearch](https://github.com/webiny/webiny-js/blob/next/packages/api-headless-cms-ddb-es/src/index.ts#L111) as storage layer, we use the `onSystemBeforeInstall` to insert the template for Elasticsearch index.
 
 ## System
 
@@ -619,7 +617,7 @@ new ContextPlugin<CmsContext>(async context => {
 });
 ```
 
-### onEntryBeforeCreateRevision
+### onEntryRevisionBeforeCreate
 
 This event is triggered before a new entry is created from originating entry and is stored into the database.
 
@@ -636,7 +634,7 @@ This event is triggered before a new entry is created from originating entry and
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
-  context.cms.onEntryBeforeCreateRevision.subscribe(async ({ model, entry }) => {
+  context.cms.onEntryRevisionBeforeCreate.subscribe(async ({ model, entry }) => {
     /**
      * For example, your entry has a "slug" field, which must be unique, but not within the entryId constraint.
      */
@@ -657,7 +655,7 @@ new ContextPlugin<CmsContext>(async context => {
 });
 ```
 
-### onEntryAfterCreateRevision
+### onEntryRevisionAfterCreate
 
 This event is triggered after a new entry is created from originating entry and is stored into the database.
 
@@ -675,7 +673,7 @@ This event is triggered after a new entry is created from originating entry and 
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
-  context.cms.onEntryAfterCreateRevision.subscribe(async ({ model, entry }) => {
+  context.cms.onEntryRevisionAfterCreate.subscribe(async ({ model, entry }) => {
     /**
      * For example, notify another system about new entry.
      */
