fix(headless-cms): content models via code immutable fields

--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
@@ -385,15 +385,15 @@ You should **never** change `modelId` property of the model definition.
 
 There are also few field properties which must **never** change, if you want to keep your data.
 
-Fields are:
+Properties are:
  - `id`
  - `storageId` - if you have created it manually
  - `type`
  - `multipleValues`
  - `predefinedValues` - you can add values but do not remove them
 
-Also, you have defined some settings:
+Also, you have defined anything settings, be careful about these properties:
 
  - `settings.fields` - same rule applies as for the parent field
- - `settings.models` - you can add models but do not remove them - you will lose data
+ - `settings.models` - you can add models but do not remove them
  - `settings.type`
