fix(headless-cms): grammar
Co-authored-by: Ben Read <endymion1818@gmail.com>

--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
@@ -378,8 +378,7 @@ Here are a couple of examples of specifying icons from solid, regular, and brand
 
 ## Immutable Code Definitions
 
-As you can do what ever you want with the models via code, there are things you need to be really careful about.
-We cannot prevent you to change anything, so you need to be watchful when creating models via code.
+You can do what ever you want with the models via code. For that reason, there are things you need to be really careful about. We cannot prevent you from changing anything, so you need to be watchful for these pitfalls.
 
 You should **never** change `modelId` property of the model definition.
 
