--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
@@ -391,8 +391,8 @@ Properties are:
  - `multipleValues`
  - `predefinedValues` - you can add values but do not remove them
 
-Also, if you have defined anything settings, be careful about these properties:
+Also, if you have defined anything in `settings` property of the field, be careful about these properties:
 
- - `settings.fields` - same rule applies as for the parent field
+ - `settings.fields` - same rules apply as for the parent field
  - `settings.models` - you can add models but do not remove them
  - `settings.type`
