fix(infrastructure): update copy for clarity

--- a/src/docs/shared/infrastructure/additional-resources/reset-state-without-redeploy.mdx
+++ b/src/docs/shared/infrastructure/additional-resources/reset-state-without-redeploy.mdx
@@ -96,7 +96,7 @@ Navigate to the DynamoDB section of you AWS dashboard and click on the "Backups"
 
 ![DynamoDB backups](./assets/reset-state-without-redeploy/8-ddb-restore.png)
 
-Rename it so that it will be the same name as the table.
+You will see on the next page that the restore settings by default add a suffix of `-restored` to the database. Delete this suffix so that so that it will be the same name as the live table and therefore overwrite it.
 
 ![DynamoDB backups restore options](./assets/reset-state-without-redeploy/9-ddb-restore-settings.png)
 
