fix: Added ts-ignore hint to the okta-sign-in widget import

--- a/src/docs/5.29.x/enterprise/okta-integration.mdx
+++ b/src/docs/5.29.x/enterprise/okta-integration.mdx
@@ -315,6 +315,7 @@ Copy the following code, and place it in `apps/admin/src/okta.ts`:
 
 ```tsx apps/admin/src/okta.ts
 import { OktaFactory } from "@webiny/app-admin-okta";
+// @ts-ignore
 import OktaSignIn from "@okta/okta-signin-widget";
 import { OktaAuth } from "@okta/okta-auth-js";
 import "@okta/okta-signin-widget/dist/css/okta-sign-in.min.css";
