fix(telemetry): update copy

--- a/src/docs/shared/webiny-telemetry/webiny-telemetry.mdx
+++ b/src/docs/shared/webiny-telemetry/webiny-telemetry.mdx
@@ -31,7 +31,7 @@ Product analytics help us build a better product by better understanding the usa
 | Source                                              | Purpose   | Events | Data sent / stored | Bindingness |
 | --------------------------------------------------- |--------   |--------| -------------------| ----------- |
 | [CLI](https://www.npmjs.com/package/@webiny/cli)    | <ul><li>Drive product improvements</li><li> Product usage insights</li><li> Troubleshooting issues in critical workflow steps</li></ul>| <ul><li>Create Webiny project started</li><li>Create Webiny project finished</li><li>Create Webiny project errors (with error messages and stack trace provided)</li><li>Deployment started</li><li>Deployment finished</li><li>Deployment errors (with error messages and stack trace provided)</li><li>Enable telemetry</li><li>Disable telemetry</li></ul>|<ul><li>Event Name</li><li>Timestamp</li><li>Unique project ID (UUID)</li><li>End-user IP Address</li><li>Error messages and stack trace (in the case of errors)</li></ul> | Optional via opt-out |
-| [Admin Dashboard](https://www.npmjs.com/package/webiny-admin)|<ul><li>Drive product improvements</li><li>Product usage insights</li></ul> |<ul><li>Admin App launched</li><li>Custom website domain updated (with domain name provided)</li></ul> |<ul><li>Event name</li><li>Timestamp</li><li>Product version</li><li>Unique project ID (UUID)</li><li>Admin App URL</li><li>End-user IP Address</li><li><strong>Custom website domain event</strong></li><li>Website URL</li></ul>|Optional via opt-out|
+| [Admin Dashboard](https://www.npmjs.com/package/webiny-admin)|<ul><li>Drive product improvements</li><li>Product usage insights</li></ul> |<ul><li>Admin App launched</li><li>Custom website domain updated (with domain name provided)</li></ul> |<ul><li>Event name</li><li>Timestamp</li><li>Product version</li><li>Unique project ID (UUID)</li><li>Admin App URL</li><li>End-user IP Address</li><li>Custom website domain event: Website URL</li></ul>|Optional via opt-out|
 
 ### 2. Usage Analytics
 
