fix(infrastructure): add link to originating AWS docs

--- a/src/docs/shared/infrastructure/additional-resources/reset-state-without-redeploy.mdx
+++ b/src/docs/shared/infrastructure/additional-resources/reset-state-without-redeploy.mdx
@@ -57,7 +57,7 @@ To follow the steps below you will need to get the domain endpoint of the OpenSe
 
 ![How to find the OpenSearch Service domain endpoint](./assets/reset-state-without-redeploy/3a-es-domain-arn.png)
 
-The full details of how to create snapshots are in this AWS Docs page, but we'll outline the steps you need specifically for a Webiny instance.
+The full details of how to create snapshots are [in this AWS Docs page](https://docs.aws.amazon.com/opensearch-service/latest/developerguide/managedomains-snapshots.html), but we'll outline the steps you need specifically for a Webiny instance.
 
 1. [Create an S3 bucket to store your snapshots](https://docs.aws.amazon.com/AmazonS3/latest/userguide/creating-bucket.html)
 2. [Create an IAM role to delegate permissions to OpenSearch Service](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_create_for-user.html) (see also the table heading ["IAM role" on this page](https://docs.aws.amazon.com/opensearch-service/latest/developerguide/managedomains-snapshots.html) for the details of the policy you will need to create)
