fix: update to mailer env vars

--- a/src/docs/5.34.x/overview/features/mailer.mdx
+++ b/src/docs/5.34.x/overview/features/mailer.mdx
@@ -42,6 +42,7 @@ The simplest, and most rudimentary, configuration is done via the environment va
 ```dotenv
 # required
 WEBINY_MAILER_HOST=smtp.webiny.com
+WEBINY_MAILER_PORT=25
 WEBINY_MAILER_USER=root
 WEBINY_MAILER_PASSWORD=password
 WEBINY_MAILER_REPLY_TO=reply-to@webiny.com
