fix: use S3 link instead of GitHub link

--- a/src/docs/5.28.x/infrastructure/aws/configure-aws-credentials.mdx
+++ b/src/docs/5.28.x/infrastructure/aws/configure-aws-credentials.mdx
@@ -105,7 +105,7 @@ If you don't have one please refer to the [previous step](../../infrastructure/a
 
 </Alert>
 
-Alternatively, you can also define a fine-grained policy using our [CloudFormation template](https://github.com/webiny/webiny-js/blob/next/docs/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json)
+Alternatively, you can also define a fine-grained policy using our [CloudFormation template](https://webiny-public.s3.us-east-2.amazonaws.com/cloudformation/iam-group-webiny-project-full.json)
 that will create a [user group](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_groups.html) with all the necessary policies, for your Webiny project and assign a given user to it.
 You can do this by clicking [create stack](https://console.aws.amazon.com/cloudformation/home?#/stacks/create/review?templateURL=https://webiny-public.s3.us-east-2.amazonaws.com/cloudformation/iam-group-webiny-project-full.json&stackName=DeployWebinyProject):
 
