--- a/src/docs/shared/release-notes/5.33.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.33.2/changelog.mdx
@@ -33,3 +33,24 @@ cms.onModelInitialize.subscribe(async ({ model }) => {
 
 The `CmsEntryElasticsearchBodyModifierPlugin` did not have the `where` parameter passed into it, so we added it.
 This now allows users to access raw `where` object, received from the GraphQL.
+
+## Development
+
+### Updated "Deploy Webiny Project" CloudFormation Template ([#2773](https://github.com/webiny/webiny-js/pull/2773))
+
+In order to reflect the changes we've recently introduced in the cloud infrastructure that Webiny deploys, with this release, we've revisited the `DeployWebinyProject` [AWS CloudFormation template](/docs/{version}/infrastructure/aws/configure-aws-credentials#attaching-a-fine-grained-policy) and updated the set of permissions it deploys. With these updates, users should now be able to use the template and expect their Webiny project to be fully deployed.
+
+<br/><br/>
+
+<Alert type="info" title="Already Used the Template?">
+
+In case you've already deployed the previous version of the `DeployWebinyProject` AWS CloudFormation template, we suggest you first destroy the deployed stack, via the AWS Console. Then, via the link to the [AWS CloudFormation template](/docs/{version}/infrastructure/aws/configure-aws-credentials#attaching-a-fine-grained-policy), you again perform a fresh deploy.
+
+</Alert>
+
+
+<Alert type="info" title="More Information">
+
+In case you missed it, in order to deploy your Webiny project in a more controlled and secure manner, you can utilize our `DeployWebinyProject` [AWS CloudFormation template](/docs/{version}/infrastructure/aws/configure-aws-credentials#attaching-a-fine-grained-policy). The template deploys necessary ([least-privilege](https://en.wikipedia.org/wiki/Principle_of_least_privilege)) set of permissions into your AWS account, which also automatically get linked with an Amazon IAM user of your choosing (the user you plan to use upon running deployments).
+
+</Alert>
